# bag_manager

./: CMakeLists.txt  package.xml
bag_manager/: bag_manager_node.cpp
launch/: bag_manager_node.launch.xml
src/: bag_manager_node.cpp
