<?xml version="1.0"?>
<package format="3">
  <name>bag_manager</name>
  <version>0.0.1</version>
  <description>bag_manager_node</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

